Fix scroll-to-target misalignment due to sticky header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,15 @@
+:root {
+  /* Variables */
+  /* scroll-to-target fix */
+  --header-offset: 2.5em;
+}
+
 /* Main Elements */
+html {
+  /* scroll-to-target fix */
+  scroll-padding-top: var(--header-offset);
+}
+
 body {
   background-color: #F0EDE8;
 } 
@@ -101,18 +112,27 @@ blockquote {
 }
 
 /* Links */
+/* header */
 header [aria-current="page"] {
   position: relative;
   color: #D0B7AA !important;
   background-color:#24201E;
 }
 
+/* footer */
 footer [aria-current="page"] {
   text-decoration: underline;
 }
 
+/* nav-links */
 .nav-link:hover {
   text-decoration: underline;
+}
+
+/* scroll-to-target */
+#top-element,
+#first-section {
+  scroll-margin-top: var(--header-offset);
 }
 
 /* Media Queries */
